--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -207,7 +207,7 @@
  author = {Knegendorf, Leonard and Hans, Felix Patricius and Haubold, Carmen},
  title = {Github: Fuenfgeld/ATeamDatenmanagementUndArchivierung},
  url = {https://github.com/Fuenfgeld/ATeamDatenmanagementUndArchivierung},
- urldate = {30.09.2021}
+ urldate = {2021-09-30}
 }
 
 
