--- a/5abbreviation.tex
+++ b/5abbreviation.tex
@@ -5,6 +5,8 @@
        
        \acro{cc}[CC]{Creative Commons}
        
+       %\acro{cis}[CIS]{}
+       
         \acro{combine}[COMBINE]{Computational Modeling in Biology Network}
         
         \acro{copasi}[COPASI]{COmplex PAthway SImulator}
@@ -12,6 +14,8 @@
         \acro{csv}[CSV]{comma-separated values}
         
         \acro{doi}[DOI]{Digital Object Identifier}
+        
+        \acro{epo}[Epo]{Erythropoietin}
         
         \acro{fair}[FAIR]{Findable, Accessible, Interoperable, Reusable}
         
