--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -210,4 +210,15 @@
  urldate = {2021-09-30}
 }
 
+@misc{org.12.08.2021,
+ abstract = {Simulation Experiment Description Language (SED-ML)},
+ author = {org, sed-ml},
+ year = {12.08.2021},
+ title = {SED-ML | Software tools and libraries},
+ url = {https://sed-ml.org/showcase.html},
+ urldate = {2021-09-30}
+}
+
+
+
 
