--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -219,6 +219,17 @@
  urldate = {2021-09-30}
 }
 
+@article{Bergmann.2014,
+ author = {Bergmann, Frank T. and Adams, Richard and Moodie, Stuart and Cooper, Jonathan and Glont, Mihai and Golebiewski, Martin and Hucka, Michael and Laibe, Camille and Miller, Andrew K. and Nickerson, David P. and Olivier, Brett G. and Rodriguez, Nicolas and Sauro, Herbert M. and Scharm, Martin and Soiland-Reyes, Stian and Waltemath, Dagmar and Yvon, Florent and {Le Nov{\`e}re}, Nicolas},
+ year = {2014},
+ title = {COMBINE archive and OMEX format: one file to share all information to reproduce a modeling project},
+ volume = {15},
+ number = {1},
+ journal = {BMC Bioinformatics},
+ doi = {10.1186/s12859-014-0369-z}
+}
+
+
 
 
 
