--- a/00titlepage.tex
+++ b/00titlepage.tex
@@ -1,14 +1,16 @@
 \begin{titlepage}
-\vspace{6cm}
+
+
 \begin{centering}
+\includegraphics[scale=0.5]{unnamed.jpg}
+\vspace{1cm}
 
-
-{\noindent\huge{COMBACH: Creation of a Fully Featured COMBINE Archive to Reproduce a Dynamic Pathway Model of JAK/STAT5 Signaling}}
+{\noindent\huge{COMBACH:\\ A case study of the creation of a fully-featured COMBINE archive of the dynamic JAK/STAT5 pathway model}}
 
 \end{centering}
 
 
-\vspace{30pt}
+\vspace{2cm}
 \noindent\textbf{Oliver H\"olsken$^{1,4,5}$~\orcidlink{0000-0001-6086-9275}, Felix Patricius Hans$^{2,4}$~\orcidlink{0000-0002-7164-7624}, Sami Habib$^{3,4}$~\orcidlink{0000-0003-4087-2869}, Abel Hodelin Hernandez$^{3,4}$~\orcidlink{0000-0002-4295-9899}}
 \\ \\
 	\small $^{1}$Charité – Universit\"atsmedizin Berlin, corporate member of Freie Universit\"at Berlin and HumboldtUniversit\"at zu Berlin, Laboratory of Innate Immunity, Department of Microbiology, Infectious Diseases and Immunology, Berlin, Germany \\
