--- a/00titlepage.tex
+++ b/00titlepage.tex
@@ -5,7 +5,7 @@
 \includegraphics[scale=0.5]{unnamed.jpg}
 \vspace{1cm}
 
-{\noindent\huge{COMBACH:\\ A case study of the creation of a fully-featured COMBINE archive of the dynamic JAK/STAT5 pathway model}}
+{\noindent\huge{COMBACH:\\ A case study of assembling of a fully-featured COMBINE archive describing the dynamic JAK/STAT5 pathway model}}
 
 \end{centering}
 
