The picture changed ... ;-)

--- a/1introduction.tex
+++ b/1introduction.tex
@@ -7,14 +7,12 @@ To address this constraint \ac{combine} archive offer the unique opportunity to 
 
 \subsection*{Rationale for this study}
 \subsubsection*{Dyamic Pathway Simulations}
-Dynamic pathway modeling is needed to describe the complex regulatory system of feedback regulators, to answer this question, Bachmann \textit{et. al.} built a dual negative feedback model of JAK2/STAT5 signaling in primary erythroid progenitor cells isolated from mouse fetal livers \cite{bachmannmodel}.
+Dynamic pathway modeling is needed to describe the complex regulatory system of feedback regulators, to answer this question, Bachmann \textit{et al.} built a dual negative feedback model of JAK2/STAT5 signaling in primary erythroid progenitor cells isolated from mouse fetal livers \cite{bachmannmodel}.
 
-Given the background of the only partially reproducible dynamic pathway model of \ac{socs} family members in JAK2/STAT5 signaling from Bachmann \textit{et. al.} \cite{bachmannmodel}, we  were asked to  to create a fully featured archive and reproduce the simulation content both for educational purposes and for scientific completion of the original work. Furthermore, the created COMBINE Archive could serve as a template to enhance reproducibility of future modelling studies.
+Given the background of the only partially reproducible dynamic pathway model of \ac{socs} family members in JAK2/STAT5 signaling from Bachmann \textit{et al.} \cite{bachmannmodel}, we  were asked to  to create a fully featured archive and reproduce the simulation content both for educational purposes and for scientific completion of the original work. Furthermore, the created COMBINE Archive could serve as a template to enhance reproducibility of future modelling studies.
 
 \subsubsection*{Agile working}
 Agile working has been a major drive for the evolution of working environment sespecially in information technologies. New definitions on how, where, with whom and when collaboration and the completion of tasks is done are enabled by digital cloud solutions and co-working platforms that integrate the allocation of tasks, versioning of content and the \textit{ad-hoc}-formation of teams. GitHub as a provider of internet-hosted software development and version control tools has been used as an essential common platform for managing software projects and supporting collaborative development. Lately some educational projects have begun to adopt it for hosting and managing course content to enhance transparency features in the creation, reuse, and remix of materials \cite{github, Knegendorf.}. In the development of this COMBINE archive we dedicated ourselves to the \acs{fair}-principles and therefore built a completely publicly traceable working environment in github, that can be accessed via the link given in the appendices.
-
-
 
 \subsection*{Objectives}
 The main objective of this case study was to create a fully featured \acs{combine}-archive including both scripts to reproduce all simulation figures and easy to access simulation data of the Bachmann model, a dynamic pathway model of JAK/STAT5 signaling \cite{bachmannmodel}. Furthermore, we aimed to create an easy to use guideline on how to compile a \acs{combine} archive out of an existing simulation model. Besides these aims we were also interested in validating all generated scripts using already established tools. Finally, we aimed to evaluate the used tools in terms of usability and assessed the completeness of the provided data to reproduce the entire study.
