--- a/4conclusions.tex
+++ b/4conclusions.tex
@@ -12,7 +12,7 @@ In summary, we were able to reproduce many, but not all experiments. Several par
 \subsection*{Limitations}
 ... To verbalize...
 \begin{itemize}
-    \item The XML reports for the validation could not be upload on the CobineArchiveWeb interface.
+    \item The XML reports from the validations could not be upload on the \textit{CobineArchiveWeb} interface.
     \item \ac{copasi} is limited in its functionality to support simulations working with more than one model. This functionality is needed in our project to run simulations in the wildtype and overexpression conditions in parallel. We, therefore, changed our procedure and ultimately built and simulated \ac{sedml} files using Tellurium.
 \end{itemize}
 
