--- a/00titlepage.tex
+++ b/00titlepage.tex
@@ -2,10 +2,10 @@
 
 
 \begin{centering}
-\includegraphics[scale=0.5]{unnamed.jpg}
+\includegraphics[scale=0.5]{figures/unnamed1}
 \vspace{1cm}
 
-{\noindent\huge{COMBACH:\\ A case study of assembling of a fully-featured COMBINE archive describing the dynamic JAK/STAT5 pathway model}}
+{\noindent\huge{COMBACH:\\ A case study to enhance the reproducibility of a dynamic JAK/STAT5 pathway model by creating a fully-featured COMBINE archive }}
 
 \end{centering}
 
