the folder for pictures was added

--- a/00titlepage.tex
+++ b/00titlepage.tex
@@ -2,7 +2,7 @@
 
 
 \begin{centering}
-\includegraphics[scale=0.5]{figures/unnamed1}
+\includegraphics[scale=0.5, width=6cm]{figures/unnamed1}
 \vspace{1cm}
 
 {\noindent\huge{COMBACH:\\ A case study to enhance the reproducibility of a dynamic JAK/STAT5 pathway model by creating a fully-featured COMBINE archive }}
